# ices-sync

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
migrations/2021-11-10-024550_user_log/: up.sql
migrations/2021-11-23-021757_event_log/: up.sql
migrations/2021-11-23-021806_project_info/: up.sql
src/: main.rs  schema.rs
src/event_log/: event.rs  mod.rs  service.rs
src/ic/: canister.rs  mod.rs
src/test_data/: service.rs
src/user/: handler.rs  service.rs
