[package]
name = "ices-sync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.15.0"
# diesel_migrations = "1.3"
chrono = "0.4.19"
# tokio = "1.13.0"
log = "0.4.14"
env_logger = "0.9.0"
ic-agent = "0.9.0"
ic-types = "0.2.2"
candid = "0.7.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_cbor = "0.11.2"
serde_bytes = "0.11.5"
serde_json = "1.0.71"
ring = "0.16.20"
rand = "0.8.4"
garcon = "0.2.3"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

